--- a/view/polemika/menu-haut.phtml
+++ b/view/polemika/menu-haut.phtml
@@ -9,8 +9,8 @@ $activePage = $nav->findActive($container);
     <div class="row">
             <div class="col-lg-3 col-md-3">
                 <div class="header__logo">
-                    <a href="<?php echo $site->slug();?>" style="font-size: 2rem; color:white; margin-top: -6px; font-weight: 500;">
-                    POLEMIKA
+                    <a href="<?php echo $site->slug();?>" style="width: 383px;font-size: 2rem; color:white; margin-top: -6px; font-weight: 500;">
+                    POLEMIKA - Prototypes
                     </a>
                 </div>
             </div>
